--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,10 +4,6 @@
 @import"./blocks/grow-rotate";
 @import"./blocks/sink";
 @import"./blocks/skew";
-@import"";
-@import"";
-@import"";
-@import"";
-@import"";
-@import"";
-@import"";
+@import"./blocks/skew-forward";
+@import"./blocks/forward";
+@import"./blocks/backward";
