--- a/css/main.css
+++ b/css/main.css
@@ -79,4 +79,89 @@
   transform: translateY(10px);
 }
 
-@im;/*# sourceMappingURL=main.css.map */
+.skew {
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 50px;
+  background-color: gray;
+  color: white;
+  font-size: 24px;
+  transition: 1s ease;
+}
+.skew:hover {
+  display: inline-block;
+  vertical-align: middle;
+  transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  transition-property: transform;
+  transition-property: transform;
+  transform-origin: 0 100%;
+  transform-origin: 0 100%;
+}
+.skew:hover, .skew:focus, .skew:active {
+  transform: skew(-10deg);
+}
+
+.skew-forward {
+  display: inline;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 50px;
+  background-color: gray;
+  color: white;
+  font-size: 20px;
+  transition: 1s ease;
+}
+.skew-forward:hover {
+  display: inline-block;
+  vertical-align: middle;
+  transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  transition-property: transform;
+  transition-property: transform;
+  transform-origin: 0 100%;
+  transform-origin: 0 100%;
+}
+.skew-forward:hover, .skew-forward:focus, .skew-forward:active {
+  transform: skew(10deg);
+  transform: skew(10deg);
+}
+
+.forward {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 50px;
+  background-color: gray;
+  color: white;
+  font-size: 24px;
+  transition: 1s ease;
+}
+.forward:hover {
+  transform: translateX(10px);
+}
+
+.backward {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 50px;
+  background-color: gray;
+  color: white;
+  font-size: 24px;
+  transition: 1s ease;
+}
+.backward:hover {
+  transform: translateX(-10px);
+}/*# sourceMappingURL=main.css.map */
