--- a/scss/blocks/_skew.scss
+++ b/scss/blocks/_skew.scss
@@ -1,5 +1,5 @@
 .skew {
-    display: flex;
+    display: inline-block ;
     justify-content: center;
     align-items: center;
     width: 100px;
@@ -10,6 +10,20 @@
     transition: 1s ease;
 
     &:hover {
-        transform: translateX(10px);
+        display: inline-block;
+        vertical-align: middle;
+        transform: perspective(1px) translateZ(0);
+        transform: perspective(1px) translateZ(0);
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+        transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        transition-property: transform;
+        transition-property: transform;
+        transform-origin: 0 100%;
+        transform-origin: 0 100%;
+    }
+    
+    &:hover, &:focus, &:active {
+        transform: skew(-10deg);
     }
 }
